// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`common.ts > should get visuals 1 1`] = `
{
  "allDay": true,
  "category": false,
  "end": {
    "date": "2019-02-14",
    "day": 14,
    "future": false,
    "hasDay": true,
    "hasTime": false,
    "hour": 0,
    "minute": 0,
    "month": 2,
    "past": false,
    "present": false,
    "time": "",
    "weekday": 4,
    "year": 2019,
  },
  "endIdentifier": 20190214,
  "endTimestampIdentifier": 201902142359,
  "index": 0,
  "input": {
    "end": "2019-02-14",
    "start": "2019-02-13",
  },
  "start": {
    "date": "2019-02-13",
    "day": 13,
    "future": false,
    "hasDay": true,
    "hasTime": false,
    "hour": 0,
    "minute": 0,
    "month": 2,
    "past": false,
    "present": false,
    "time": "",
    "weekday": 3,
    "year": 2019,
  },
  "startIdentifier": 20190213,
  "startTimestampIdentifier": 201902130000,
}
`;

exports[`common.ts > should get visuals 1 2`] = `
{
  "allDay": true,
  "category": false,
  "end": {
    "date": "2019-02-14",
    "day": 14,
    "future": false,
    "hasDay": true,
    "hasTime": false,
    "hour": 0,
    "minute": 0,
    "month": 2,
    "past": false,
    "present": false,
    "time": "",
    "weekday": 4,
    "year": 2019,
  },
  "endIdentifier": 20190214,
  "endTimestampIdentifier": 201902142359,
  "index": 0,
  "input": {
    "a": "2019-02-13",
    "b": "2019-02-14",
  },
  "start": {
    "date": "2019-02-13",
    "day": 13,
    "future": false,
    "hasDay": true,
    "hasTime": false,
    "hour": 0,
    "minute": 0,
    "month": 2,
    "past": false,
    "present": false,
    "time": "",
    "weekday": 3,
    "year": 2019,
  },
  "startIdentifier": 20190213,
  "startTimestampIdentifier": 201902130000,
}
`;

exports[`common.ts > should get visuals 1 3`] = `
{
  "allDay": true,
  "category": false,
  "end": {
    "date": "2019-02-14",
    "day": 14,
    "future": false,
    "hasDay": true,
    "hasTime": false,
    "hour": 0,
    "minute": 0,
    "month": 2,
    "past": false,
    "present": false,
    "time": "",
    "weekday": 4,
    "year": 2019,
  },
  "endIdentifier": 20190214,
  "endTimestampIdentifier": 201902142359,
  "index": 1,
  "input": {
    "end": "2019-02-14",
    "start": "2019-02-13",
  },
  "start": {
    "date": "2019-02-13",
    "day": 13,
    "future": false,
    "hasDay": true,
    "hasTime": false,
    "hour": 0,
    "minute": 0,
    "month": 2,
    "past": false,
    "present": false,
    "time": "",
    "weekday": 3,
    "year": 2019,
  },
  "startIdentifier": 20190213,
  "startTimestampIdentifier": 201902130000,
}
`;

exports[`common.ts > should get visuals 1 4`] = `
{
  "allDay": true,
  "category": false,
  "end": {
    "date": "2019-02-14",
    "day": 14,
    "future": false,
    "hasDay": true,
    "hasTime": false,
    "hour": 0,
    "minute": 0,
    "month": 2,
    "past": false,
    "present": false,
    "time": "",
    "weekday": 4,
    "year": 2019,
  },
  "endIdentifier": 20190214,
  "endTimestampIdentifier": 201902142359,
  "index": 1,
  "input": {
    "a": "2019-02-13",
    "b": "2019-02-14",
  },
  "start": {
    "date": "2019-02-13",
    "day": 13,
    "future": false,
    "hasDay": true,
    "hasTime": false,
    "hour": 0,
    "minute": 0,
    "month": 2,
    "past": false,
    "present": false,
    "time": "",
    "weekday": 3,
    "year": 2019,
  },
  "startIdentifier": 20190213,
  "startTimestampIdentifier": 201902130000,
}
`;
